--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <base href="/">
-    <title>Angular With Webpack!!!!!!!!!</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
 
-    <my-app>Loading...</my-app>
-  </body>
+<head>
+  <link href="node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
+  <base href="/">
+  <title>Angular With Webpack!!!!!!!!!</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+
+  <my-app>Loading...</my-app>
+</body>
+
 </html>
