--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <link href="../node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
+  <link href="../node_modules/ng-pick-datetime//assets//style//picker.min.css" rel="stylesheet">
   <!-- <link href="../node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet" type="text/css"> -->
   <base href="/">
   <title>Angular With Webpack!!!!!!!!!</title>
