--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-  <link href="../node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
-  <link href="../node_modules/ng-pick-datetime//assets//style//picker.min.css" rel="stylesheet">
+  <!-- <link href="../node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
+  <link href="../node_modules/ng-pick-datetime//assets//style//picker.min.css" rel="stylesheet"> -->
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- <link href="../node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet" type="text/css"> -->
